--- a/src/top/index.html
+++ b/src/top/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="text"></div>
     <div class="video">
-      <video preload="" muted="" autoplay controls width="361" height="203">
+      <video preload="" muted="" autoplay controls>
         <source src="../assets/video.mp4" type="video/mp4">
       </video>
     </div>
